# upnp_to_json

./: .gitignore  pyproject.toml
upnp_to_json/: __init__.py  upnp_converter.py  upnp_json_converter.py  upnp_schema_definitions.py  upnp_xml_parser.py
