[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upnp_to_json"
version = "0.1.0"
description = "Convert UPnp xml to json responses"
authors = [
  { name="James Hollon", email="james.hollon@gmail.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
